updated chores, added Hee Joong

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "roommate-chores",
   "version": "0.1.0",
+  "homepage": "https://hamza-elhamdadi.github.io/chore-list/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
